--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Nandini Sharma
 # logo: /assets/img/my_image.png
 #description: text below image
 # show_downloads: true
-theme: jekyll-theme-minimal
+theme: minima
