--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nandini Sharma
-logo: /assets/img/my_image.png
+logo: /assets/img/my_image.jpg
 #description: text below image
 # show_downloads: true
 theme: minima
